# markdowner

./: .gitignore  Cargo.toml  README.ko.md  README.md  VERSION  index.html  install.sh  package.json  playground.html  pnpm-lock.yaml  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: release.yml
crates/markdowner-core/: Cargo.toml
crates/markdowner-core/src/: document.rs  lib.rs  markdown.rs  platform.rs  settings.rs  storage.rs  theme.rs  workspace.rs
crates/markdowner-core/tests/: core_boundary.rs  markdown_fixtures.rs
crates/markdowner-core/tests/fixtures/: catalog.json
crates/markdowner-core/tests/fixtures/headings/: blank-line-groups.expected.md  levels-three-through-six.md  multiline-paragraph.expected.md
crates/markdowner-core/tests/fixtures/images/: relative-parent-path.expected.md  relative-path.expected.md  title-and-spaces.expected.md
crates/markdowner-core/tests/fixtures/unsupported/: footnote.md  mdx-like.expected.md
crates/markdowner-macos/: Cargo.toml
docs/: markdown-coverage.md
docs/architecture/: core-platform-boundary.md
scripts/: build-and-install.sh  build-and-install.test.sh  build.mjs  sync-version.mjs
src/: App.test.tsx  App.tsx  AppCoreFlow.test.tsx  editorPlayground.tsx  main.tsx  styles.css  styles.test.ts  tauriConfig.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: self-update.sh  self-update.test.sh
src-tauri/src/: diagnostics.rs  export_file.rs  lib.rs  lib.rs.patch  link_actions.rs  main.rs  pdf_export.rs  (+4 more)
(+177 files in other folders)
